# aliyun-odps-console

./: .gitignore  .gitlab-ci.yml  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGELOG_CN.md  CLAUDE.md  MANIFEST.in  Makefile  README.md  maxc.spec  pom.xml  pyproject.toml  pytest.ini  requirements-bundle.txt  settings.xml  setup.py
.aoneci/: cli-publish.yaml
.claude-plugin/: SKILL.md  marketplace.json  plugin.json
.maxc/: config.yaml
docs/: ARCHITECTURE.md  ENVELOPE_SPEC.md  ODPS_BACKEND.md  agent-readable-improvements.md  ata-maxc-cli.md  base-api-roadmap.md  design.md  implementation.md  improvement-suggestions.md  improvements-critical.md  install-guide.md  maxc-cli-launch-article-v2.md  maxc-cli-launch-article.md  oceanbase-cli.md  product-positioning.md  promo.md  roadmap.md
evals/: evals.json
odps-console-auth/: plugin.ini  pom.xml
odps-console-basic/: args_test_file  logback.xml  out.txt  pom.xml
odps-console-cupid-public/: README.md  plugin.ini  pom.xml
odps-console-datahub/: plugin.ini  pom.xml
odps-console-dist-public/: assembly.xml  odps_config.ini  pom.xml
odps-console-dship/: .gitignore  pom.xml
odps-console-file/: plugin.ini  pom.xml
odps-console-mr/: pom.xml
odps-console-public/: plugin.ini  pom.xml
odps-console-resource/: plugin.ini  pom.xml
odps-console-sql/: plugin.ini  pom.xml
odps-console-stream/: plugin.ini  pom.xml
odps-console-tunnel/: pom.xml
odps-console-volume2/: plugin.ini  pom.xml  public_plugin.ini
odps-console-xflow/: plugin.ini  pom.xml
scripts/: bootstrap-ncs-prompt.md  bootstrap-ncs.ps1  bootstrap-ncs.sh  bootstrap.sh  build_release.sh  install-agent.md  install-and-setup.sh  publish_latest.sh  pyinstaller_entry.py  regression_test.py  release.sh  sync_codex_skill.py  upload_to_oss.sh
tests/: README.md  conftest.py  (+39 more)
(+574 files in other folders)
