[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxc-cli"
version = "0.1.0"
description = "Agent-native MaxCompute CLI for external coding agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0", "pyodps", "pandas"]

[project.scripts]
maxc = "maxc_cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
