[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501 ignored for now: legacy codebase has 300+ long lines (mostly long SQL
# strings, dense parameter lists, and docstrings). Tighten in a later sweep
# once we've decided whether to wrap at the source or raise line-length.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests put `pytestmark = pytest.mark.unit` before imports on purpose.
"tests/*" = ["E402"]
